syntax = "proto3";

package product;

option go_package = "/pb/product";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc ListProduct(Empty) returns (stream ListProductResponse);
    rpc GetProductById(ProductID) returns (ProductResponse);
    rpc UpdateProduct(ProductRequest) returns (ProductResponse);
    rpc DeleteProduct(ProductID) returns (DeleteProductResponse);
    rpc GetRandomProducts(NRequest) returns (stream ListProductResponse);
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    string category = 4;
}

message Empty {}

message CreateProductRequest {
    string name = 1;
    float price = 2;
    string category = 3;
}

message ProductResponse {
    bool success = 1;
    string message = 2;
    repeated Product product=3;
}

message ProductID {
    string id = 1;
}

message ProductRequest {
    Product product =1;
}

message ListProductResponse {
    bool success = 1;
    string message = 2;
    repeated Product products = 3;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}

message NRequest {
    int32 size = 1; 
}